--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.leopard</groupId>
 	<artifactId>leopard-data-parent</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 
@@ -13,9 +13,9 @@
 	</parent>
 
 	<scm>
-		<url>https://github.com/tanhaichao/leopard-data/tags/leopard-data-parent-0.0.2</url>
-		<connection>scm:svn:https://github.com/tanhaichao/leopard-data/tags/leopard-data-parent-0.0.2</connection>
-		<developerConnection>scm:svn:https://github.com/tanhaichao/leopard-data/tags/leopard-data-parent-0.0.2</developerConnection>
+		<url>https://github.com/tanhaichao/leopard-data</url>
+		<connection>scm:svn:https://github.com/tanhaichao/leopard-data/trunk</connection>
+		<developerConnection>scm:svn:https://github.com/tanhaichao/leopard-data/trunk</developerConnection>
 	</scm>
 
 	<dependencyManagement>
