--- a/leopard-redis/pom.xml
+++ b/leopard-redis/pom.xml
@@ -15,7 +15,10 @@
 			<artifactId>jedis</artifactId>
 			<version>2.7.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
