--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
 		<module>leopard-memdb</module>
 		<module>leopard-cache</module>
 		<module>leopard-queue</module>
+		<module>leopard-dfs</module>
 	</modules>
 </project>
