--- a/leopard-dfs/pom.xml
+++ b/leopard-dfs/pom.xml
@@ -29,5 +29,9 @@
 			<version>0.0.3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 </project>
