--- a/leopard-jdbc/pom.xml
+++ b/leopard-jdbc/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.leopard</groupId>
 		<artifactId>leopard-data-parent</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 	<artifactId>leopard-jdbc</artifactId>
 
