--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,13 @@
 			<dependency>
 				<groupId>io.leopard</groupId>
 				<artifactId>autounit</artifactId>
-				<version>0.2</version>
+				<version>0.3-SNAPSHOT</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.leopard</groupId>
+				<artifactId>autounit-web</artifactId>
+				<version>0.3-SNAPSHOT</version>
 				<scope>provided</scope>
 			</dependency>
 		</dependencies>
