--- a/leopard-jdbc/pom.xml
+++ b/leopard-jdbc/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>autounit-web</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.leopard</groupId>
+			<artifactId>leopard-json</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
