--- a/leopard-mongo/pom.xml
+++ b/leopard-mongo/pom.xml
@@ -6,7 +6,8 @@
 		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-mongo</artifactId>
-	
+	<name>Leopard-Mongo</name>
+	<description>MongoDB操作，基于mongo-java-driver封装，简化MongoDB操作.</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.mongodb</groupId>
