--- a/leopard-dfs/pom.xml
+++ b/leopard-dfs/pom.xml
@@ -6,7 +6,8 @@
 		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-dfs</artifactId>
-
+	<name>Leopard-Dfs</name>
+	<description>分布式文件系统实现，目前只是做了基于GridFS的实现，可以在本机文件系统进行缓存。</description>
 
 	<dependencies>
 		<dependency>
