--- a/leopard-kit/pom.xml
+++ b/leopard-kit/pom.xml
@@ -6,6 +6,9 @@
 		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-kit</artifactId>
+	<name>Leopard-Kit</name>
+	<description>常见数据源组合操作组件，如：新数量计数器(日、周、月等)、按自然时间的数量排名等。</description>
+	
 	<dependencies>
 		<dependency>
 			<groupId>io.leopard</groupId>
