--- a/leopard-memdb/pom.xml
+++ b/leopard-memdb/pom.xml
@@ -7,7 +7,8 @@
 	</parent>
 	<artifactId>leopard-memdb</artifactId>
 	<name>Leopard-Memdb</name>
-	<description>内存KV数据库，基于Java Map实现，支持单JVM、跨JVM同步。</description>
+	<description>内存KV数据库、PubSub。内存KV数据库基于Java Map实现，支持单JVM、跨JVM同步。PubSub基于Redis实现，非常方便实现当前项目所有JVM通讯。</description>
+	
 	<dependencies>
 		<!-- pubsub使用 -->
 		<dependency>
