--- a/leopard-kit/pom.xml
+++ b/leopard-kit/pom.xml
@@ -27,5 +27,10 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>io.leopard</groupId>
+			<artifactId>leopard-timer</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
