--- a/pom.xml
+++ b/pom.xml
@@ -47,4 +47,12 @@
 		<module>leopard-dfs</module>
 		<module>leopard-kit</module>
 	</modules>
+	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>http://leopard.io/nexus/content/repositories/framework-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
