--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>io.leopard.depend</groupId>
 		<artifactId>depend</artifactId>
-		<version>0.0.13</version>
+		<version>0.1-SNAPSHOT</version>
 	</parent>
 
 	<scm>
@@ -48,11 +48,4 @@
 		<module>leopard-kit</module>
 	</modules>
 	
-	<distributionManagement>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>http://leopard.io/nexus/content/repositories/framework-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
