--- a/leopard-mongo/pom.xml
+++ b/leopard-mongo/pom.xml
@@ -12,6 +12,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.2</version>
 		</dependency>
 	</dependencies>
 </project>
