--- a/leopard-jdbc/pom.xml
+++ b/leopard-jdbc/pom.xml
@@ -39,7 +39,7 @@
 		<!-- <dependency> <groupId>io.leopard</groupId> <artifactId>jlang</artifactId> </dependency> -->
 		<dependency>
 			<groupId>io.leopard</groupId>
-			<artifactId>autounit</artifactId>
+			<artifactId>autounit-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
