--- a/leopard-memcache/pom.xml
+++ b/leopard-memcache/pom.xml
@@ -27,7 +27,7 @@
 
 		<dependency>
 			<groupId>io.leopard</groupId>
-			<artifactId>autounit</artifactId>
+			<artifactId>autounit-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
