--- a/leopard-jdbc/pom.xml
+++ b/leopard-jdbc/pom.xml
@@ -25,6 +25,11 @@
 			<version>5.1.31</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.leopard</groupId>
+			<artifactId>leopard-json</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
