--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,16 @@
 
 	<dependencyManagement>
 		<dependencies>
-
+			<dependency>
+				<groupId>io.leopard</groupId>
+				<artifactId>leopard-json</artifactId>
+				<version>0.8</version>
+			</dependency>
+			<dependency>
+				<groupId>io.leopard</groupId>
+				<artifactId>leopard-timer</artifactId>
+				<version>0.8</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
