--- a/leopard-mongo/pom.xml
+++ b/leopard-mongo/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.leopard</groupId>
 		<artifactId>leopard-data-parent</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.8</version>
 	</parent>
 	<artifactId>leopard-mongo</artifactId>
 	<name>Leopard-Mongo</name>
