--- a/leopard-cache/pom.xml
+++ b/leopard-cache/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.leopard</groupId>
 		<artifactId>leopard-data-parent</artifactId>
-		<version>0.9.1</version>
+		<version>0.9.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-cache</artifactId>
 	<name>Leopard-Cache</name>
