--- a/leopard-memcache/pom.xml
+++ b/leopard-memcache/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.leopard</groupId>
 		<artifactId>leopard-data-parent</artifactId>
-		<version>0.9.1</version>
+		<version>0.9.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-memcache</artifactId>
 	
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>io.leopard</groupId>
 			<artifactId>leopard-redis</artifactId>
-			<version>0.9.1</version>
+			<version>0.9.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
