--- a/leopard-redis/pom.xml
+++ b/leopard-redis/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.leopard</groupId>
 		<artifactId>leopard-data-parent</artifactId>
-		<version>0.9.3</version>
+		<version>0.9.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>leopard-redis</artifactId>
 	<name>Leopard-Redis</name>
