--- a/leopard-kit/pom.xml
+++ b/leopard-kit/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>leopard-exception</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.leopard</groupId>
+			<artifactId>leopard-util</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
