--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			</dependency>
 			<dependency>
 				<groupId>io.leopard</groupId>
+				<artifactId>leopard-util</artifactId>
+				<version>${leopard.unified.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.leopard</groupId>
 				<artifactId>leopard-timer</artifactId>
 				<version>${leopard.unified.version}</version>
 			</dependency>
