--- a/leopard-kit/pom.xml
+++ b/leopard-kit/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 
 
