--- a/leopard-rpc/pom.xml
+++ b/leopard-rpc/pom.xml
@@ -29,6 +29,9 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 </project>
